Added change status for reservation and fixed api for getting all reservations
