# src/main/resources/openapi/sausc-api.yaml
@@ -420,6 +420,40 @@ paths:
         '500':
           description: Server error
 
+  /api/v1/reservation/{reservationId}/status:
+    put:
+      tags:
+        - reservation
+      parameters:
+        - name: reservationId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ChangeReservationStatusRequestDto'
+      description: Change the status of a reservation.
+      responses:
+        '200':
+          description: Success
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ReservationDto'
+        '400':
+          description: Bad request
+        '404':
+          description: Reservation not found
+        '500':
+          description: Server error
+
+
+
   /api/v1/status:
     post:
       tags:
@@ -653,7 +687,7 @@ components:
         idActivity:
           type: integer
           format: int64
-        statusId:
+        idStatus:
           type: integer
           format: int64
 
@@ -719,12 +753,12 @@ components:
     ReservationsRequestDto:
       type: object
       properties:
-        startTime:
+        startDate:
           type: string
-          format: date-time
-        endTime:
+          format: date
+        endDate:
           type: string
-          format: date-time
+          format: date
 
     ReservationAvailableStartTimesRequestDto:
       type: object
@@ -757,6 +791,13 @@ components:
         startTime:
           type: string
           format: time
+
+    ChangeReservationStatusRequestDto:
+      type: object
+      properties:
+        idStatus:
+          type: integer
+          format: int64
 
 
 
